--- a/ssh/config
+++ b/ssh/config
@@ -1,17 +1,22 @@
-# Gitlab.com
+# gitlab.com
 Host zeltner.philippklein.me
 	HostName zeltner.philippklein.me
 	User user
 
 Host gitlab.com
 	PreferredAuthentications publickey
-	IdentityFile ~/.ssh/keys/id_ed25519
+	IdentityFile ~/.ssh/id_ed25519
+
+# github.com
+Host github.com
+	PreferredAuthentications publickey
+	IdentityFile ~/.ssh/id_ed25519
 
 # FAU
 Host fau
 	HostName cipterm0.cip.cs.fau.de
 	PreferredAuthentications publickey
-	IdentityFile ~/.ssh/keys/id_ed25519
+	IdentityFile ~/.ssh/id_ed25519
 	User xy76tyce
 
 #raspi
