--- a/terminal/kitty/kitty.conf
+++ b/terminal/kitty/kitty.conf
@@ -670,7 +670,7 @@ window_alert_on_bell yes
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
-enabled_layouts Tall
+enabled_layouts Tall,Fat
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -751,7 +751,7 @@ enabled_layouts Tall
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -776,7 +776,6 @@ enabled_layouts Tall
 #: bottom, bottom-right.
 
 # window_logo_alpha 0.5
-window_logo_alpha 1
 
 #: The amount the logo should be faded into the background. With zero
 #: being fully faded and one being fully opaque.
@@ -1150,7 +1149,7 @@ background_opacity 1.0
 #: background processes still using the terminal can fail silently
 #: because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -2175,5 +2174,5 @@ map kitty_mod+t new_tab_with_cwd
 
 #: }}}
 
- # Add color scheme
-include dark_modern.conf
+# Added by Gogh
+include monochrome.conf
