--- a/terminal/starship/dot.yaml
+++ b/terminal/starship/dot.yaml
@@ -1,5 +1,5 @@
-# links:
-  # starship.toml: ~/.config/starship.toml
+links:
+  starship.toml: ~/.config/starship.toml
 
 installs:
   cmd: sudo pacman -S --needed starship
