squashed: mini.deps
Includes these old commits:
- !Move to mini.deps as the plugin manager
- fix navigation
- Enable treesitter-textobjects
- Simplify some plugin specs
- Add simple highlight file for jayvee
- Add jayvee filetype and lspconfig
- improve buffer titles
- add jayvee ftplugin
- rename minis to mini
- move from todo-comments to mini.hipatterns
- Make npm global install per user
- reenable clippy
- fix extended capabilites being set after lsp setup
- Move from whichkey to mini.clue
- more mini
- eob:~
- Slightly better keymaps
- Move jayvee to its own plugin
- Add fallback if mason-bridge fails
- Add pipx to path
- Split lsp config
- Enable lsp folding
- plaintext prompt
- Improve fold highlighting
- Don't show icons in tty
- Add keymap to toggle foldcolumn
- Increase font size
- Add navigation keys to more modes
- Remove unnescesarry options
- Add border to lsp floats
- Move to lazydev instead of neodev
- Test mini.completion
- make wezter.lua nicer
- Disable snippets until mini.snippets
- Add ltex
- move from typst_lsp and typstfmt to tinymist
- Update conform.nvim
- Add helper to get color hex
- Move from typescript-language-server to vtsls
- remove typstfmt from formatters
- latex + typst + fold
- add toggleterm
- set lsp formatting to fallback
- add linter for makefiles
- Move from `nvim-web-devicons` to `mini.icons`
- move from deprecated `vim.loop` to `vim.uv`
- Adapt `nvim-cmp` to `lazydev`
- move from FiraCode to Iosevka
- add cjk fallback
- Fix icon spacing
- add fuzzy matching
- revert back to nvim-cmp
- fix table extend error
- make texlab work in general again
- Add picker for pickers
- add aerial.nvim
- make colorschemes persistent
- use new lspkind functionality from mini.icons
- fix tabline not respecting `vim.g.have_nerd_fonts`
- hack: terminal borders
- kickstart suggestions
- add `MiniTrim`command
- add codelens stuff
- improve keymaps
- switch to rustaceanvim
- remove mason-bridge
- use default highlights
- latex stuff
- remove not wor

--- a/terminal/dot.yaml
+++ b/terminal/dot.yaml
@@ -1,7 +1,5 @@
 links:
-  kitty: ~/.config/kitty/
-  kitty/nvimcfg: ~/.bin/nvimcfg
   wezterm: ~/.config/wezterm
-
-installs:
-  cmd: sudo pacman -S --needed kitty
+  nushell: ~/.config/nushell
+  starship/starship.toml: ~/.config/starship.toml
+  bat: ~/.config/bat
