--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -1,3 +1,49 @@
+format = """
+╭ \
+$username\
+$hostname\
+$directory\
+$git_branch\
+$git_commit\
+$git_state\
+$git_status\
+$cmd_duration\
+$line_break\
+[╰](green) \
+$status\
+$character"""
+
+[character]
+disabled = true
+
+[git_branch]
+format = "[$branch(:$remote_branch)]($style)"
+style = "bright-black"
+only_attached = true
+
+
+[git_commit]
+format = '[$hash$tag]($style) '
+style = "bright-black"
+
+[git_status]
+format = '[[($conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)'
+style = "cyan"
+conflicted = "⇄"
+untracked = "?"
+modified = "!"
+staged = "+"
+renamed = "»"
+deleted = "✖"
+stashed = '\$'
+
+[git_state]
+format = '\([$state( $progress_current/$progress_total)]($style)\) '
+style = "bright-black"
+
+[cmd_duration]
+disabled = true
+
 [status]
 disabled = false
-symbol = ''
+format = "[$status](red) "
