--- a/ssh/config
+++ b/ssh/config
@@ -23,3 +23,7 @@ Host fau
 Host raspi
 	HostName 192.168.2.106
 	User pi
+
+Host *.cip.cs.fau.de
+    User xy76tyce
+    IdentityFile /home/jonas/.ssh/stubs
