squashed: setup after nvim 0.11
Includes these old commits:
- Move plugins into `plugin/` directory
- Removed unused utils
- Update mini.nvim setup
- Codestyle
- blink: disable signature
- Split help vertically
- Update nushell config to 0.101
- Use default tab switching keybinds
- Add ghostty
- Add terminal exec entry
- Maximize on startup
- Enable lsp file watching
- Create keymaps that toggle a persistent terminal
- Disable window decorations
- Set colorscheme on `UIEnter`
- Don't install stable treesitter parsers by default
- Fix vtsls settings
- Import `mini.deps` types
- Import blink type
- Move formattng and linting into ftplugin
- Improve filtetype configurations
- Setup `lua_ls` using `vim.lsp.config`
- Move lsp specs into rtp and start lsps in ftplugin
- Complete transition to rtp plugins
- Backtrack a bunch with the rtp plugins
- Enable window padding distribution
- Set `vim.g.lsps` to a only enable those lsps
- Move biome and eslint setup into project local configs
- Set lsp capabilities in the correct place
- Cleanup tabline
- Remove obsolete _G.LspClientCapabilities
- Don't use vim.lsp.enable until nvim-lspconfig supports this better
- Adapt lsp configurations
- Redo `mini.extra`
- Make `blink_build` blocking
- Add jsonls
- Add minimal repro.lua file
- blink.cmp now sets the capabilities itself
- Acomodate tree-sitter-jayvee
- Acomodate jayvee_ls
- Better colors
- Set repro plugin
- Fix prompt
- Remove duplicate jayvee_ls
- Auto-update installed tools
- Add workaround for rust crashes
- Rely on ghostty builtin nerdfont glyphs
- Remove obsolete
- Make `vim.o.background` persistent
- Move lazydev dependency
- fix: Terminal colors are now applied without switching colorscheme
- Reorganize mini modules
- Test harper_ls
- Use desktop settings to globally switch light/dark
- Move to nvim themes inside the terminal
- Revert "Test harper_ls"
- This reverts commit 1118abceb8c86227556eff77e1713932f46da790.
- Smarter terminal windows
- Fix ls colors
- Fix hipatte

--- a/bin/dot.yaml
+++ b/bin/dot.yaml
@@ -1,4 +1,5 @@
 links:
   fullup: ~/.local/bin/fullup
+  gnome-toggle-style: ~/.local/bin/gnome-toggle-style
   witcher3modmanager: ~/.local/bin/witcher3modmanager
   witcher3scriptmerger: ~/.local/bin/witcher3scriptmerger
