--- a/terminal/dot.yaml
+++ b/terminal/dot.yaml
@@ -1,5 +1,7 @@
 links:
   wezterm: ~/.config/wezterm
+  ghostty: ~/.config/ghostty
   nushell: ~/.config/nushell
-  starship/starship.toml: ~/.config/starship.toml
   bat: ~/.config/bat
+  starship/starship.toml: ~/.config/starship.toml
+  xdg-terminal-exec/xdg-terminals.list: ~/.config/xdg-terminals.list
