--- a/terminal/bat/config
+++ b/terminal/bat/config
@@ -4,7 +4,7 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
-#--theme="TwoDark"
+--theme ansi
 
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
@@ -24,8 +24,6 @@
 #--map-syntax "*.ino:C++"
 #--map-syntax ".ignore:Git Ignore"
 
-# Hide all components by default
---plain
+# More minimal output
+--style=changes,snip,rule
 
-# Better theme
---theme="base16-256"
