--- a/terminal/starship/starship.toml
+++ b/terminal/starship/starship.toml
@@ -1,5 +1,5 @@
 format = """
-╭ \
+[╭](green) \
 $username\
 $hostname\
 $directory\
@@ -7,7 +7,7 @@ $git_branch\
 $git_commit\
 $git_state\
 $git_status\
-$cmd_duration\
+$python\
 $line_break\
 [╰](green) \
 $status\
@@ -27,7 +27,7 @@ format = '[$hash$tag]($style) '
 style = "bright-black"
 
 [git_status]
-format = '[[($conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)'
+format = '[[($conflicted$untracked$modified$staged$renamed$deleted)](purple) ($ahead_behind$stashed)]($style)'
 style = "cyan"
 conflicted = "⇄"
 untracked = "?"
@@ -41,8 +41,9 @@ stashed = '\$'
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
 style = "bright-black"
 
-[cmd_duration]
-disabled = true
+[python]
+format = '[(\($virtualenv\) )]($style)'
+style = "green"
 
 [status]
 disabled = false
