--- a/terminal/ghostty/config
+++ b/terminal/ghostty/config
@@ -1,7 +1,7 @@
 command = nu
 
 font-family = Iosevka Term
-font-size = 17
+font-size = 18
 
 theme = dark:NvimDark,light:NvimLight
 cursor-color = #D28A52
@@ -11,6 +11,7 @@ window-theme = ghostty
 window-padding-balance = true
 
 maximize = true
+gtk-titlebar-hide-when-maximized = true
 
 keybind = ctrl+shift+l=new_split:right
 keybind = ctrl+shift+o=toggle_tab_overview
