Use Osc52 as the nvim clipboard provider

--- a/terminal/ghostty/config
+++ b/terminal/ghostty/config
@@ -13,3 +13,6 @@ gtk-titlebar-hide-when-maximized = true
 
 keybind = ctrl+shift+l=new_split:right
 
+clipboard-read = allow
+clipboard-write = allow
+
