--- a/terminal/ghostty/config
+++ b/terminal/ghostty/config
@@ -1,15 +1,13 @@
 command = zsh
 
 font-family = Adwaita Mono
-font-size = 15
+font-size = 16
 
-window-theme = ghostty
-theme = dark:NvimDark,light:NvimLight
+theme = dark:Adwaita Dark,light:Adwaita
 cursor-color = #D28A52
 
 window-padding-balance = true
 maximize = true
-gtk-titlebar-hide-when-maximized = true
 
 keybind = ctrl+shift+l=new_split:right
 
