.luarc.json code style

--- a/editors/nvim/.luarc.json
+++ b/editors/nvim/.luarc.json
@@ -1,13 +1,17 @@
 {
 	"$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-	"workspace.library": [
-		"$VIMRUNTIME",
-		"$HOME/.local/share/nvim/site/pack/core/opt"
-	],
-	"workspace.checkThirdParty": "false",
-	"runtime.path": [
-		"lua/?.lua",
-		"lua/?/init.lua"
-	],
-	"runtime.version": "LuaJIT"
+	"workspace": {
+		"library": [
+			"$VIMRUNTIME",
+			"$HOME/.local/share/nvim/site/pack/core/opt"
+		],
+		"checkThirdParty": "false"
+	},
+	"runtime": {
+		"path": [
+			"lua/?.lua",
+			"lua/?/init.lua"
+		],
+		"version": "LuaJIT"
+	}
 }
