--- a/prompt/Cargo.toml
+++ b/prompt/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 git2 = { version = "0.20.1", default-features = false }
-nix = { version = "0.30.0", features = ["hostname", "user"] }
+libc = "0.2.174"
 
 [lints.clippy]
 cast_possible_wrap = "deny"
